--- a/templates/500.html
+++ b/templates/500.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div id="four_oh_four">
+    <div id="error_page">
 
         <section id="hero">
             <div class="container">
@@ -19,7 +19,8 @@
                         <hr>
 
                         <p>
-                            Try refreshing and <strong>resubmitting any form info</strong>.<br>It just might work this time.
+                            Don't worry, <strong>we've been notified</strong> and are looking into it.<br>
+                            You can try refreshing the page, it just might work this time.
                         </p>
 
                     </div><!--.col-->
