a bit of whitespace cleanup

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <p class="lead">
-                            Here are the primary features
+                            {{APP_BLURB}}
                         </p>
                     </div><!--.col-->
                 </div><!--.row-->
