--- a/templates/404.html
+++ b/templates/404.html
@@ -19,12 +19,7 @@
                         <hr>
 
                         <p>
-                            Maybe try going to
-                            {% if session['user_id'] %}
-                            <a href="{{ url_for('dash.dashboard_root') }}">your dashboard.</a>
-                            {% else %}
-                            <a href="/">the homepage.</a>
-                            {% endif %}
+                            Maybe try going to <a href="/">the homepage.</a>
                         </p>
 
                     </div><!--.col-->
