update our angular app setup to use a base app and reduce boilerplate

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 
+    {% if js_init %}
+    <script type="text/javascript">
+        window.js_init = {{ js_init | safe}}
+    </script>
+    <script type="text/javascript" src="/static/js/base-app.js"></script>
+    {% endif %}
+
     {% block footer %}{% endblock %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pnotify/3.2.1/pnotify.js"></script>
