cloak the page until angular has loaded

--- a/templates/dash/root.html
+++ b/templates/dash/root.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div id="dash-root" ng-app="BaseApp" ng-controller="DashRootController as app">
+    <div id="dash-root" ng-app="BaseApp" ng-controller="DashRootController as app" ng-cloak>
 
         <section id="section_slug">
             <div class="container">
