add a basic nav bar with user info and logout link

--- a/templates/dash/root.html
+++ b/templates/dash/root.html
@@ -8,6 +8,8 @@
 
     <div id="dash-root" ng-app="BaseApp" ng-controller="DashRootController as app" ng-cloak>
 
+        {% include 'dash/nav.html' %}
+
         <section id="section_slug">
             <div class="container">
                 <div class="row">
