--- a/templates/web/sign-up.html
+++ b/templates/web/sign-up.html
@@ -13,14 +13,19 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                         <h2>Sign Up</h2>
+                        <hr>
                         <form class="form" method="post">
                             <div class="form-group">
-                                <label for="email">Your Email</label>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Email Address">
+                                <label for="name">Full Name</label>
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Johnny Appleseed">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email Address</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="johnny@example.com">
                             </div>
                             <div class="form-group">
                                 <label for="password">Choose a Password</label>
-                                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                                <input type="password" class="form-control" name="password" id="password" placeholder="Choose a password...">
                             </div>
                             <input type="submit" value="Join &rarr;" class="btn btn-primary btn-lg pull-right" />
                             <span class="pull-left">Have an account? <a href="{{ url_for('web.login') }}">Login here.</a></span>
