whoops, bad form label in password reset flow

--- a/templates/web/reset-password.html
+++ b/templates/web/reset-password.html
@@ -20,7 +20,7 @@
                         <hr>
                         <form class="form" method="post">
                             <div class="form-group">
-                                <label for="password">Your Email</label>
+                                <label for="password">New Password</label>
                                 <input type="password" class="form-control" name="password" id="password" placeholder="New Password" required>
                             </div>
                             <div class="form-group">
