--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
         window.js_init = {{ js_init | safe}}
     </script>
     <script type="text/javascript" src="/static/js/base-app.js"></script>
+    <script type="text/javascript" src="/static/js/{{ request.endpoint.replace('.', '/').replace('_', '-') }}.js?c={{config.static_last_update}}"></script>
     {% endif %}
 
     {% block footer %}{% endblock %}
