update to new bootstrap 4 nav

--- a/templates/dash/nav.html
+++ b/templates/dash/nav.html
@@ -1,50 +1,35 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-                <img src="/static/images/{{APP_SLUG}}-logo.png" class="brand" style="width: 120px; position: relative; top: -5px;" />
-            </a>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">
+        <img src="/static/images/{{APP_SLUG}}-logo.png" class="brand" style="" />
+        {{APP_NAME}}
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="nav navbar-form navbar-left">
-
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 10px 15px">
-                        <img src="{{request.user.gravatar_url(30)}}"  class="img-circle"/>
-                        <span class="visible-xs-inline">
-                            <strong>{{request.user.name}}</strong> <small>{{request.user.email}}</small>
-                        </span>
-                        <span class="caret"></span>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% if request.endpoint == 'dash.root' %}active{% endif %}">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="{{request.user.gravatar_url(30)}}"  class="img-circle"/>
+                    <span class="visible-xs-inline">
+                        <strong>{{request.user.name}}</strong>
+                    </span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('web.logout') }}">
+                        <i class="fa fa-power-off"></i> Logout
                     </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">
-                                <strong>{{request.user.name}}</strong><br>
-                                <small>{{request.user.email}}</small>
-                            </a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="{{ url_for('web.logout') }}">
-                                <i class="fa fa-power-off"></i> Logout
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+                </div>
+            </li>
+        </ul>
+    </div>
 </nav>
