use bootstrap4 flexbox styles to center login/signup/error pagess

--- a/templates/404.html
+++ b/templates/404.html
@@ -6,26 +6,23 @@
 
 {% block content %}
 
-    <div id="error_page">
+    <div id="error_page" class="h-100">
+        <div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-6 text-center">
 
-        <section id="hero">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-md-offset-4 text-center">
+                    <h1>404</h1>
+                    <h3>Not found :(</h3>
 
-                        <h1>404</h1>
-                        <h3>Not found :(</h3>
+                    <hr>
 
-                        <hr>
+                    <p>
+                        Maybe try going to <a href="/">the homepage.</a>
+                    </p>
 
-                        <p>
-                            Maybe try going to <a href="/">the homepage.</a>
-                        </p>
-
-                    </div><!--.col-->
-                </div><!--.row-->
-            </div><!--.container-->
-        </section>
+                </div><!--.col-->
+            </div><!--.row-->
+        </div><!--.container-->
 
     </div>
 
