--- a/templates/500.html
+++ b/templates/500.html
@@ -6,27 +6,24 @@
 
 {% block content %}
 
-    <div id="error_page">
+    <div id="error_page" class="h-100">
+        <div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-6 text-center">
 
-        <section id="hero">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-md-offset-4 text-center">
+                    <h1>500</h1>
+                    <h3>Our bad :(</h3>
 
-                        <h1>500</h1>
-                        <h3>Our bad :(</h3>
+                    <hr>
 
-                        <hr>
+                    <p>
+                        Don't worry, <strong>we've been notified</strong> and are looking into it.<br>
+                        You can try refreshing the page, it just might work this time.
+                    </p>
 
-                        <p>
-                            Don't worry, <strong>we've been notified</strong> and are looking into it.<br>
-                            You can try refreshing the page, it just might work this time.
-                        </p>
-
-                    </div><!--.col-->
-                </div><!--.row-->
-            </div><!--.container-->
-        </section>
+                </div><!--.col-->
+            </div><!--.row-->
+        </div><!--.container-->
 
     </div>
 
