--- a/templates/web/reset-password.html
+++ b/templates/web/reset-password.html
@@ -6,35 +6,31 @@
 
 {% block content %}
 
-    <div id="reset-email">
-
-        <section id="hero">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <h2>Reset Password</h2>
+    <div id="reset-password" class="h-100">
+        <div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-6">
+                    <h2>Reset Password</h2>
+                    <hr>
+                    <p class="lead">
+                        Resetting password for {{user.email}}
+                    </p>
+                    <hr>
+                    <form class="form" method="post">
+                        <div class="form-group">
+                            <label for="password">New Password</label>
+                            <input type="password" class="form-control" name="password" id="password" placeholder="New Password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="confirm_password">Confirm Password</label>
+                            <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="Confirm New Password" required>
+                        </div>
                         <hr>
-                        <p class="lead">
-                            Resetting password for {{user.email}}
-                        </p>
-                        <hr>
-                        <form class="form" method="post">
-                            <div class="form-group">
-                                <label for="password">New Password</label>
-                                <input type="password" class="form-control" name="password" id="password" placeholder="New Password" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="confirm_password">Confirm Password</label>
-                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="Confirm New Password" required>
-                            </div>
-                            <hr>
-                            <input type="submit" value="Reset Password" class="btn btn-primary pull-right" />
-                        </form>
-                    </div><!--.col-->
-                </div><!--.row-->
-            </div><!--.container-->
-        </section>
-
+                        <input type="submit" value="Reset Password" class="btn btn-primary pull-right" />
+                    </form>
+                </div><!--.col-->
+            </div><!--.row-->
+        </div><!--.container-->
     </div>
 
 {% endblock %}
