align nav dropdown on the right side

--- a/templates/dash/nav.html
+++ b/templates/dash/nav.html
@@ -24,7 +24,7 @@
                         <strong>{{request.user.name}}</strong>
                     </span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('web.logout') }}">
                         <i class="fa fa-power-off"></i> Logout
                     </a>
