update error pages

--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
                 <div class="col-6 text-center">
 
                     <h1>404</h1>
-                    <h3>Not found :(</h3>
+                    <h3>Not found 🗺</h3>
 
                     <hr>
 
