--- a/templates/500.html
+++ b/templates/500.html
@@ -12,7 +12,7 @@
                 <div class="col-6 text-center">
 
                     <h1>500</h1>
-                    <h3>Our bad :(</h3>
+                    <h3>Our bad 😩</h3>
 
                     <hr>
 
