WIP adding navigation drawer to app bar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         <div id="app">
             <v-app>
 
-                <app-bar session_type="anonymous" />
+                <app-bar is_logged_in />
 
                 <v-main>
                     <v-container>
